--- a/src/main/resources/templates/healthclass/detail.html
+++ b/src/main/resources/templates/healthclass/detail.html
@@ -72,7 +72,7 @@ function goBack() {
 	window.history.back();
 }
 window.onload = function() {
-	const cl_no = /*[[${healthclass.clNo}]]*/'기본값'
+	const cl_no = /*[[${healthclass.clNo}]]*/'기본값';
 	const profileFileName = /*[[${healthclass.clProfile}]]*/'기본값';
 	const thumbnailFileName = /*[[${healthclass.clThumbnail}]]*/'기본값';
 	if ( profileFileName == null) {
