--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,12 +7,12 @@
 		<input type="button" onclick = "location.href = 'MyPage'" value="마이페이지">
 	</div>
 	<div>
-		<h1><a href="/mainpage"><img src="image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></a></h1>
+		<h1><a href="/main"><img src="/image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></a></h1>
 	</div>
 	<div class="topMenu" >
 		<ul class="menu">
 			<li class="li"><a class="menuLink" href="noticelist">공지사항</a></li>
-			<li class="li"><a class="menuLink" href="ctlist">강의리스트</a></li>
+			<li class="li"><a class="menuLink" href="/healthclass">강좌리스트</a></li>
 			<li class="li"><a class="menuLink" href="boardList">게시판</a></li>
 		</ul>
 	</div>
