--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,14 +5,35 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>main page</title>
 <link rel="stylesheet" href="../css/header.css">
-<link rel="stylesheet" href="../css/main.css">
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+<link rel="stylesheet" href="../css/main1.css">
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script type="text/javascript">
+$(document).ready(function() {
+	MainboardList();
+});
+function MainboardList(){
+	$.ajax({
+		type : "GET",
+		url : "/MainboardList",
+		success : function(result){
+			console.log(result);
+			content = "<table class='noticetable'><tr><th colspan='2'>공지사항</th></tr>";
+			$.each(result.nblist,function(index,item){
+				content += "<tr><td><a class='a' href=''>"+item.nbTitle+"</td>";
+				content += "<td>"+moment(item.nbDate).format("YYYY-MM-DD HH:mm:ss")+"</td></tr>";
+			});
+			content += "</table>";
+			
+			$("#MainboardList").html(content);
+		}
+	});
+}
 $(function(){
-	$('#slider-div').slick({
+	$('.slider-div').not('.slick-initialized').slick({
 		slide: 'div',		//슬라이드 되어야 할 태그 ex) div, li 
 		vertical : false,		// 세로 방향 슬라이드 옵션
 		centerMode: true,
@@ -47,56 +68,23 @@ $(function(){
 		]
 	});
 })
-
-$(document).ready(function() {
-	MainboardList();
-});
-
-function MainboardList(){
-	$.ajax({
-		type : "GET",
-		url : "/MainboardList",
-		success : function(result){
-			content = "<table class='noticetable'><tr><th>공지사항</th></tr>";
-			$.each(result.nblist,function(index,item){
-				content += "<tr><td><a class='a' href=''>"+item.nb_title+"</td>";
-				content += "<td>"+item.nb_date+"</td></tr>";
-			});
-			content += "</table>";
-			
-			$("#MainboardList").html(content);
-		}
-	});
-}
-function LiveList(){
-	$.ajax({
-		type : "GET",
-		url : "/LiveList",
-		success : function(result){
-			$.each(result.livelist,function(index,item){
-				content = "<div><a href=''><image src="+item.camp_image+" style='width:200px; height:200px;'/></a>"+item.nb_title+"</div>";
-			});
-			
-			$("#LiveList").html(content);
-		}
-	});
-}
 </script>
 </head>
 <body>
 <div class="wrapper">
 <th:block layout:fragment="header" th:include="@{/header}"></th:block>
-	<div style="padding:15px 25px; background-color: skyblue;" >
-		<div id="slider-div">
-	 	 	<div>
-	 	 		1
-	 	 	</div>
+	<div style="padding:15px 25px; background-color: skyblue;">
+		<div class='slider-div' id="LiveList">
+			<div th:each="list :${livelist}">
+				<a href="">
+	  			<image src="[[${list.liveThumbnail}]]" style="width:200px; height:200px;"/>
+	  			</a>[[${list.liveName}]]
+			</div>
 		</div>
 	</div>
 	<div class="container">
 		<div id="MainboardList" class="MainboardList"></div>
 		<div class="ran">
-		
 		</div>
 	</div>
 </div>
