--- a/src/main/resources/templates/healthclass/list.html
+++ b/src/main/resources/templates/healthclass/list.html
@@ -111,7 +111,7 @@ window.onload = function() {
 	<input type="hidden" name="listCategory" th:value="${listCategory}"/>
 	<input type="submit" value="검색">
 	</form>
-	<input type="button" value="강좌 작성" onclick="location.href='/healthclass/insertform'" />
+	<input type="button" value="강좌 작성" onclick="location.href='/healthclass/writeform'" />
 </div>
 </div>
 <th:block layout:fragment="footer" th:include="@{/footer}"></th:block>
