--- a/src/main/resources/templates/healthclass/writeform.html
+++ b/src/main/resources/templates/healthclass/writeform.html
@@ -11,7 +11,7 @@
 <th:block layout:fragment="header" th:include="@{/header}"></th:block>
 	<div class="container" align="center">
 		<h2 class="text-primary">강좌 작성</h2>
-		<form action="/healthclass/insert" method="post" enctype="multipart/form-data"
+		<form action="/healthclass/write" method="post" enctype="multipart/form-data"
 			onsubmit="return checkTypeDay()">
 			<table class="table table-striped">	
 				<tr>
