--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>main page</title>
 <link rel="stylesheet" href="../css/header.css">
-<link rel="stylesheet" href="../css/main1.css">
+<link rel="stylesheet" href="../css/main.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 <script src="http://code.jquery.com/jquery-latest.js"></script>
