--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,19 +1,20 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko"
+ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <header class="header" th:fragment="header">
 	<div>
-		<input type="button" onclick = "location.href = 'login'" value="로그인">
-		<input type="button" onclick = "location.href = 'Register'" value="회원가입">
-		<input type="button" onclick = "location.href = 'logout'" value="로그아웃">
-		<input type="button" onclick = "location.href = 'MyPage'" value="마이페이지">
+		<input type="button" onclick = "location.href = 'loginForm'" value="로그인" sec:authorize="isAnonymous()" />
+		<input type="button" onclick = "location.href = 'Join'" value="회원가입" sec:authorize="isAnonymous()" />
+		<input type="button" onclick = "location.href = 'logout'" value="로그아웃" sec:authorize="isAuthenticated()" />
+		<input type="button" onclick = "location.href = 'MyPage'" value="마이페이지" sec:authorize="isAuthenticated()" />
 	</div>
 	<div>
 		<h1><a href="/main"><img src="/image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></a></h1>
 	</div>
 	<div class="topMenu" >
 		<ul class="menu">
-			<li class="li"><a class="menuLink" href="noticelist">공지사항</a></li>
+			<li class="li"><a class="menuLink" href="/noticelist">공지사항</a></li>
 			<li class="li"><a class="menuLink" href="/healthclass">강좌리스트</a></li>
-			<li class="li"><a class="menuLink" href="boardList">게시판</a></li>
+			<li class="li"><a class="menuLink" href="/boardList">게시판</a></li>
 		</ul>
 	</div>
 </header>
