--- a/src/main/resources/templates/healthclass/search.html
+++ b/src/main/resources/templates/healthclass/search.html
@@ -65,6 +65,7 @@
 </nav>  
 <div>
 <form action="/healthclass/search" method="get">
+<input type="hidden" name="_csrf" th:value="${_csrf?.token}">
 	<select class="box" name="searchCategory" id="searchCategory">
   		<option value="강좌명" th:selected="${searchCategory} == '강좌명'">강좌명</option>
   		<option value="강사명" th:selected="${searchCategory} == '강사명'">강사명</option>
