--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,14 +2,16 @@
  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <header class="header" th:fragment="header">
 	<div>
-		<input type="button" onclick = "location.href = 'loginForm'" value="로그인" sec:authorize="isAnonymous()" />
-		<input type="button" onclick = "location.href = 'Join'" value="회원가입" sec:authorize="isAnonymous()" />
-		<input type="button" onclick = "location.href = 'logout'" value="로그아웃" sec:authorize="isAuthenticated()" />
-		<input type="button" onclick = "location.href = 'MyPage'" value="마이페이지" sec:authorize="isAuthenticated()" />
+		<input type="button" onclick = "location.href = '/loginForm'" value="로그인" sec:authorize="isAnonymous()" />
+		<input type="button" onclick = "location.href = '/Join'" value="회원가입" sec:authorize="isAnonymous()" />
+		<input type="button" onclick = "location.href = '/logout'" value="로그아웃" sec:authorize="isAuthenticated()" />
+		<input type="button" onclick = "location.href = '/MyPage'" value="마이페이지" sec:authorize="isAuthenticated()" />
 	</div>
-	<div>
-		<h1><a href="/main"><img src="/image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></a></h1>
+	
+	<div> 
+		<h1><img src="/image/airplane.png" alt="로고" style="weight: 100px; height:100px;"></h1>
 	</div>
+	 
 	<div class="topMenu" >
 		<ul class="menu">
 			<li class="li"><a class="menuLink" href="/noticelist">공지사항</a></li>
