--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -16,7 +16,7 @@
 		<ul class="menu">
 			<li class="li"><a class="menuLink" href="/noticelist">공지사항</a></li>
 			<li class="li"><a class="menuLink" href="/healthclass">강좌리스트</a></li>
-			<li class="li"><a class="menuLink" href="/boardList">게시판</a></li>
+			<li class="li"><a class="menuLink" href="/boardList">QNA게시판</a></li>
 		</ul>
 	</div>
 </header>
