--- a/src/main/resources/templates/healthclass/search.html
+++ b/src/main/resources/templates/healthclass/search.html
@@ -3,7 +3,7 @@
 		xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <link rel="stylesheet" href="/css/header.css">
-<link href="/css/lecturelist/lecturelist.css" rel="stylesheet">
+<link rel="stylesheet" href="/css/healthclass/list.css" >
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <title>Insert title here</title>
