--- a/src/main/resources/templates/healthclass/list.html
+++ b/src/main/resources/templates/healthclass/list.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/css/lecturelist/lecturelist.css">
+<link rel="stylesheet" href="/css/healthclass/list.css">
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
